	  from implicit classes.
	- StartJob() didn't send the job-sheets, job-priority,
	  and job-hold-until attributes to remote printers.
	- The pstops and imagetops filters now generate copies
	  using the appropriate method for a Level 1, 2, or 3
	  printer since some Level 2/3 printers don't support
	  the /#copies variable anymore.
	- The man page for cups-lpd did not mention the "-o"
	  option.
	- Caldera fix: lpr didn't recognize BSD lpr "-1", "-2",
	  "-3", or "-4" options.
	- SuSE fix: Exit from child if setgid() or setuid()
	  fails.
	- SuSE fix: Added setgroups() calls after setgid() and
	  setuid() calls.
	- SuSE fix: potential buffer overflows in httpEncode64()
	  calls.
	- SuSE fix: potential buffer overflows in httpSeparate()
	- SuSE fix: potential buffer overflows in ippWrite() for
	  bad input.
	- SuSE fix: potential nul skip in ppd_decode() for
	  missing hex digits.


CHANGES IN CUPS V1.1.6-2

	- Added changes to support NetBSD startup scripts.
	- Added separate compiler options for pstoraster
	  (Ghostscript) to avoid compiler-induced errors
	  from Ghostscript's twisted code.
	- The mime.types file contained syntax errors.
	- Updated the *BSD USB device filenames to use
	  the /dev/unlptN files so that the USB device
	  is not reset prior to printing (causes print
	  corruption on many printers)
	- Added new cupsTempFd() function to avoid serious
	  security bug in glibc fopen() function.  The glibc
	  fopen() function unlinks a file before creating it,
	  which opens up possible symlink attacks.
	- Now reject 0-length names in add-printer and add-class
	  requests.
	- Fix for pstoraster when ZLIB is not available.
	- cupsGetPPD() didn't reconnect when a HTTP connection
	  was lost.
	- SuSE fix: httpConnect() didn't check that the
	  value from gethostbyname() was a valid IPv4 address.
	- SuSE fix: httpConnect() didn't allow file descriptor 0
	  to be used for a socket.
	- SuSE fix: ippRead() didn't confirm that all values in