@@ -26,8 +26,11 @@ CHANGES IN CUPS V1.1.6-3
 	  the /#copies variable anymore.
 	- The man page for cups-lpd did not mention the "-o"
 	  option.
+	- Caldera fix: lpc now reports unimplemented commands as
+	  unimplemented, not invalid.
+	- Caldera fix: lpq didn't recognize BSD lpq "-a" option.
 	- Caldera fix: lpr didn't recognize BSD lpr "-1", "-2",
-	  "-3", or "-4" options.
+	  "-3", "-4", "-q", or "-U" options.
 	- SuSE fix: Exit from child if setgid() or setuid()
 	  fails.
 	- SuSE fix: Added setgroups() calls after setgid() and
